# haggle

./: .hgignore  Makefile.am  configure.ac
android/: install_haggle.sh
android/Haggle/: build.xml
android/LuckyMe/: build.xml  custom_rules.xml
android/PhotoShare/: .classpath  AndroidManifest.xml  ant.properties  build.xml  custom_rules.xml
android/device-files/: adhoc.sh  tiwlan.ini
android/extlibs/: build.sh
macosx/Haggle.xcodeproj/: project.pbxproj
resources/: config.xml
src/: Makefile.am
src/bbs/: Makefile.am  mini_base64.c
src/filedrop/: Makefile.am
src/hagglekernel/: Android.mk  ApplicationManager.cpp  ConnectivityBluetoothLinux.cpp  ConnectivityBluetoothWindowsMobile.cpp  ConnectivityLocal.cpp  ConnectivityLocalAndroid.h  ConnectivityLocalLinux.cpp  ConnectivityLocalLinux.h  ConnectivityManager.cpp  ConnectivityManager.h  DataManager.cpp  DataStore.h  Debug.cpp  Debug.h  DebugManager.cpp  DebugManager.h  Event.h  Forwarder.h  ForwarderAsynchronous.cpp  ForwarderAsynchronous.h  ForwarderEpidemic.h  ForwarderProphet.cpp  ForwarderProphet.h  ForwardingManager.cpp  ForwardingManager.h  Makefile.am  Manager.h  NodeManager.cpp  Protocol.cpp  Trace.cpp  (+12 more)
src/tests/test01/: Makefile.am
src/utils/: Makefile.am  utils.c
src/visualization/siteManager/: Makefile.am  siteManager
src/visualization/siteManager/src/: siteManager
src/visualization/siteManager/src/Forwarding/: HandleVclient.java  Makefile  MonitorManager.java  UDPForward.java  VDown.java
src/visualization/vclient/: Makefile  Makefile.am  control.h  log.c  log.h  logparser.c  logparser.h  network.h  position.c  readln.h  util.c
src/visualization/vclient/examples/haggle/: haggle
src/visualization/vclient/examples/ping/: ping  vclient.config
src/visualization/vclient/examples/ping/info/: position
src/visualization/vclient/test/: start_app.sh
src/visualization/vendetta/: Makefile.am  README  compile_vendetta.sh  run_demo.sh  run_testbed.sh  run_testbed_remote.sh  run_vendetta.sh
src/visualization/vendetta/configs/dcoss/: monitor  nodes.txt
src/visualization/vendetta/configs/haggledemo/: HaggleCanvas  dump2relations.xsl  monitor
src/visualization/vendetta/configs/haggletestbed/: nodes.txt
src/visualization/vendetta/configs/haggletestbedremote/: HaggleCanvas  dump2relations.xsl
src/visualization/vendetta/configs/karlsruhe/: floorcanvas  nodes.txt
src/visualization/vendetta/configs/ping.conf/: floorcanvas  monitor  nodes.txt
src/visualization/vendetta/configs/wisenet/: floorcanvas  monitor  nodes.txt
src/visualization/vendetta/scripts/: vendetta-file-run
src/visualization/vendetta/scripts/haggle/: blacklist-bt.sh  blacklist-eth.sh  blacklist.sh  check_nodes.sh  controller  initfilter.sh  insert_DO.sh  linkdown.sh  linkup.sh  manage_node.sh  node_exists.sh  openfile.java  remove_logs.sh  scenariorunner.java  start_program_on_node.sh  stop_node.sh  wait_for_app_to_stop.sh
src/visualization/vendetta/scripts/haggle/scenarios/: hagglescenario.xml
src/visualization/vendetta/scripts/haggle/scenarios/traces/: fully_connected_10_nodes.trc  fully_connected_5_nodes.trc  markov_5_60_2_double.trc  trace.txt
src/visualization/vendetta/scripts/haggle/scenarios/traces/trace-generator/: gen_line_trace.py  gen_markov_trace.py  gen_mesh_trace.py  gen_ring_trace.py
src/visualization/vendetta/scripts/haggle/testsuite/: run_several_testsuites  run_testsuite  test1.xml  test2.xml  test3.xml  test4.xml  test5.xml
src/visualization/vendetta/scripts/haggle/testsuite/traces/: test2.txt
src/visualization/vendetta/scripts/wisenet/: copy_screenshot  push_clap_basestation.sh  push_clap_client-tmote.sh  push_ibc-energest.sh  set_symbols_and_copy  set_vclient_if.sh
src/visualization/vendetta/src/vendetta/: MonitorNode.java  MonitoredNetwork.java  Vendetta.java
src/visualization/vendetta/src/vendetta/gui/: FileModePanel.java  FilterField.java  GUI.java  NetModePanel.java  VTextArea.java
src/visualization/vendetta/src/vendetta/gui/splash/: Splash.java
src/visualization/vendetta/src/vendetta/gui/vtable/: VTable.java  VTableModel.java
src/visualization/vendetta/src/vendetta/monitored_network/haggle/: Attribute.java  Coordinate.java  DOTable.java  DataObject.java  DrawingSurface.java  Haggle.java  HaggleLogHandler.java  Rect.java  SensorNode.java
src/visualization/vendetta/src/vendetta/monitored_network/tutorial/: PingNetwork.java  PingNode.java
src/visualization/vendetta/src/vendetta/monitored_network/wisenet/: SensorNode.java  Wisenet.java  WisenetLogHandler.java
src/visualization/vendetta/src/vendetta/network/: TCPDown.java  TCPDownDirect.java  TCPDownStatic.java  TCPUp.java  UDPDown.java
src/visualization/vendetta/src/vendetta/util/: QuotedStringTokenizer.java
src/visualization/vendetta/src/vendetta/util/fork/: BulkForkOneThread.java  BulkForkThread.java  BulkForkWindow.java
src/visualization/vendetta/src/vendetta/util/log/: GUISink.java  LogSink.java  StdoutSink.java
src/visualization/vendetta/src/vendetta/vbuffer/: FileBuffer.java  NetBuffer.java  VBuffer.java
src/visualization/vendetta/src/vendetta/vconfig/: VConfigReader.java  VSettings.java
src/visualization/vendetta/src/vendetta/visualization/canvases/: FloorCanvas.java  HaggleCanvas.java  Vendetta3DCanvas.java  VendettaCanvas.java
src/visualization/vendetta/src/vendetta/visualization/other/: ConnectionVisualizer.java  PacketVisualizer.java
src/visualization/vendetta/src/vendetta/visualization/shapes/: ConnectionLine.java  LookUpLines.java  MonitorNodeShape.java  MovingParticle.java  NodeSphere.java  RTLines.java  SphereLines.java
testsuite/test_security/: Makefile.am
visualization/: Makefile.am
(+136 files in other folders)
