noinst_JAVA = \
        ./scripts/haggle/openfile.java \
        ./scripts/haggle/scenariorunner.java \
        ./src/vendetta/MonitorNode.java \
        ./src/vendetta/MonitoredNetwork.java \
        ./src/vendetta/Vendetta.java \
        ./src/vendetta/gui/FileModePanel.java \
        ./src/vendetta/gui/FilterField.java \
        ./src/vendetta/gui/GUI.java \
        ./src/vendetta/gui/NetModePanel.java \
        ./src/vendetta/gui/VTextArea.java \
        ./src/vendetta/gui/splash/Splash.java \
        ./src/vendetta/gui/vtable/VTable.java \
        ./src/vendetta/gui/vtable/VTableModel.java \
        ./src/vendetta/monitored_network/haggle/Attribute.java \
        ./src/vendetta/monitored_network/haggle/Coordinate.java \
        ./src/vendetta/monitored_network/haggle/DOTable.java \
        ./src/vendetta/monitored_network/haggle/DataObject.java \
        ./src/vendetta/monitored_network/haggle/DrawingSurface.java \
        ./src/vendetta/monitored_network/haggle/Haggle.java \
        ./src/vendetta/monitored_network/haggle/HaggleLogHandler.java \
        ./src/vendetta/monitored_network/haggle/Rect.java \
        ./src/vendetta/monitored_network/haggle/SensorNode.java \
        ./src/vendetta/network/TCPDown.java \
        ./src/vendetta/network/TCPDownDirect.java \
        ./src/vendetta/network/TCPDownStatic.java \
        ./src/vendetta/network/TCPUp.java \
        ./src/vendetta/network/UDPDown.java \
        ./src/vendetta/util/QuotedStringTokenizer.java \
        ./src/vendetta/util/fork/BulkForkOneThread.java \
        ./src/vendetta/util/fork/BulkForkThread.java \
        ./src/vendetta/util/fork/BulkForkWindow.java \
        ./src/vendetta/util/log/GUISink.java \
        ./src/vendetta/util/log/Log.java \
        ./src/vendetta/util/log/LogSink.java \
        ./src/vendetta/util/log/StdoutSink.java \
        ./src/vendetta/vbuffer/FileBuffer.java \
        ./src/vendetta/vbuffer/NetBuffer.java \
        ./src/vendetta/vbuffer/VBuffer.java \
        ./src/vendetta/vconfig/VConfigReader.java \
        ./src/vendetta/vconfig/VSettings.java \
        ./src/vendetta/visualization/canvases/HaggleCanvas.java \
        ./src/vendetta/visualization/canvases/VendettaCanvas.java

EXTRA_DIST= $(noinst_JAVA)

JAVAROOT=classes

AM_JAVACFLAGS=

clean-local:
	rm -rf classes/*
	rm -f *~
	rm -f *.class
	rm -f *.stamp
